--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -307,7 +307,7 @@ operator eigenvalue equation
 \be\lb{ExcitationOperatorsDef1}
 \Liouv \op E = E \op E \;, %\qq \op{\tilde E} \Liouv = E \op{\tilde E}
 \ee
-with the normalization condition $\trace{\op E\op E'} = \delta(E-E')$.
+with the normalization condition $\trace{\op E\op E'} = \delta(E-E')$ (WRONG!!!).
 %\be
 %\trace{\op E\op E'} = \delta(E-E') \;. \nn
 %\ee
@@ -327,7 +327,15 @@ and the orthonormalization condition of the excitation operators is expressed as
 \sum_p \left(\braket{\phi_p^E | \phi_p^{E'}} + \braket{\chi_p^E | \chi_p^{E'}}\right) = \delta(E-E') \;. \nn
 \ee
 
+\vspace{0.3cm}
+\noindent{TODO: Identify the more convenient equations to present the localization argument on the excited states. 
+\vspace{0.3cm}
 
+Due to the previous argument we can state that the localization feature of the excited states depend on the energy of the excitation to which they belong. In particular if $E<\eps_p$ the
+state $\ket{\phi^E_p}$ behaves as a bound-state  
+
+%defined in the dyadic representation of the excitation operators possess  that 
+%state that the excitation spectrum is
 
 \vspace{1cm}
 
