--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -177,33 +177,20 @@ observable induced by a time-dependent perturbing field acting on the system. Th
 % \ee
 % Susceptibility describes an intrinsic feature of the unperturbed system and determines its response to \emph{any} perturbations, in the linear response regime.
 Here $\op O$ represents the observable\footnote{For a sake of concreteness, we are limiting our considerations to observables that do not explicitly depend on time} under inspection 
-while the \emph{response density operator} $\dm'(\omega)$ describes the modification of the ground-state density induced by the perturbation. In the contest of the linear response 
-the response satisfies an equation of motion written in the form of a quantum Liouville operator (for example see \cite{baroni2008}),
+while the \emph{response density operator} $\dm'(\omega)$ describes the modification of the ground-state density induced by the perturbation. In the contest of the LR the response 
+density satisfies an equation of motion written in the form of a quantum Liouville operator (for example see \cite{baroni2008}),
 \be\lb{LiouvillianRhopomegaDef1}
 \left(\omega - \Liouv\right) \dm'(\omega) =  \commutator{\op\Phi(\omega)}{\dmnot} \;,
 \ee
-and $\op\Phi(\omega)$ represents the perturbing field acting on the system. 
+where $\op\Phi(\omega)$ represents the perturbing field acting on the system. 
 
 \subsection{Fluctuation states. A localization argument for the response density}
+\lb{FluctuationState}
 
 The response density operator is expressed as the first-order variation of ground state density $\sum_{\{p\}} \ket{\psi_p} \bra{\psi_p}$, where the set $\{\ket{\psi_p}\}$ denote the 
 occupied states, \emph{i.e} the subset of the bound eigenstates of $\hnot$ with energy $\eps_p$ lower than the Fermi level. Using this notation we denote the energy of the HOMO level 
 as $\eps_h$ and identify the value of the first ionization potential with $|\eps_h|$. In what follows we will assume that the set of states $\{\ket{\psi_p}\}$ are described by real 
 functions, when projected in the $\r$-representation.  
-
-% By considering the linear order time evolution of the eigenstates of $\hnot$ in presence of the perturbation we can derive the equation of motion of the response density in the form of 
-% a quantum Liouville equation (for example see \cite{baroni2008}). This procedure suggests us to introduce an explicit representation of the response density in terms of a set of 
-% $\omega$-dependent \emph{fluctuation states} $\{\ket{f_p(\omega)}\}$, as follows: 
-% \be\lb{rhoPrimeFluctuationStateDef1}
-% \dm'(\omega) = \sum_p\left(\ketbra{\psi_p}{f_p(-\omega)} + \ketbra{f_p(\omega)}{\psi_p}\right) \;.
-% \ee
-% Fluctuation states are, by construction, orthogonal to the occupied eigenstates of $\hnot$. An analysis of the Liouville equation for the response density written in this fashion evidences 
-% that their equations of motion are written in the form of a modified Sternheimer equation \cite{mahan1980}:
-% \be\lb{fluctuationStateEqMotion1}
-% \left[\omega - (\hnot-\eps_p)\right]\ket{f_p(\omega)} = \op Q_0(\op\Phi(\omega)+\op V'(\omega))\ket{\psi_p} \;,
-% \ee
-% where $\op Q_0=\identity-\dmnot$ is the projector in the subspace orthogonal to the occupied states of $\hnot$ and the operator $\op V'(\omega)$ is a perturbing term due to the 
-% density-dependence of the unperturbed Hamiltonian.
 
 The inspection of the linear order time evolution of the eigenstates of $\hnot$ evidence that the response density acts as a transitions operator, linking the occupied and empty subspaces 
 of $\hnot$, and satisfies the \emph{transverse} condition  
@@ -213,9 +200,9 @@ of $\hnot$, and satisfies the \emph{transverse} condition
 where $\op Q_0=\identity-\dmnot$ is the projector in the subspace orthogonal to the occupied states of $\hnot$. Due to this fact it is possible to introduce an explicit representation of the 
 response density as follows 
 \be\lb{rhoPrimeFluctuationStateDef1}
-\dm'(\omega) = \sum_p\left(\ketbra{\psi_p}{f_p(-\omega)} + \ketbra{f_p(\omega)}{\psi_p}\right) \;,
+\dm'(\omega) = \sum_p\left(\ketbra{\psi_p}{f_p(-\omega)} + \ketbra{f_p(\omega)}{\psi_p}\right) \;.
 \ee
-where we have defined the set of $\omega$-dependent \emph{fluctuation states} $\{\ket{f_p(\omega)}\}$, that span the empty subspace of $\hnot$. 
+Here we have defined the set of $\omega$-dependent \emph{fluctuation states} $\{\ket{f_p(\omega)}\}$, that span the empty subspace of $\hnot$. 
 An analysis of the Liouville equation \eqref{LiouvillianRhopomegaDef1} for the response density written in this fashion evidences that the equations of motion of fluctuation states are 
 written as a modified Sternheimer equations \cite{mahan1980}
 \be\lb{fluctuationStateEqMotion1}
@@ -303,59 +290,77 @@ The main advantage of this approach relies on the fact that the susceptibility d
 independently from the specific choice of the perturbing field.
 
 The analysis is based on the spectral decomposition of the Liouville equation \eqref{LiouvillianRhopomegaDef1} and the make usage of the \emph{excitation operators}, defined through the 
-operator eigenvalue equation
+left and right action eigenvalue equations 
 \be\lb{ExcitationOperatorsDef1}
-\Liouv \op E = E \op E \;, %\qq \op{\tilde E} \Liouv = E \op{\tilde E}
+\Liouv \op E = E \op E \qq \op{\tilde E} \Liouv = E \op{\tilde E} \;,
 \ee
-with the normalization condition $\trace{\op E\op E'} = \delta(E-E')$ (WRONG!!!).
-%\be
-%\trace{\op E\op E'} = \delta(E-E') \;. \nn
-%\ee
-The properties of the Liouvillian superoperator (see appendix?) imply that excitations are transverse operators so that $\op E = \dmnot\op E\op Q_0 + \op Q_0\op E\dmnot$. 
-This condition allows us to introduce a dyadic representation of excitations as follows
-\be\lb{ExcitationOperatorsDef2}
-\op E = \sum_p \left( \ket{\phi^E_p}\bra{\psi_p} + \ket{\psi_p} \bra{\chi^E_p}\right)\;, 
-\ee
-where the \emph{excited states} $\ket{\phi^E_p}$ and $\bra{\chi^E_p}$ span the domain of $\op Q_0$, \emph{i.e} the empty subspace of $\hnot$. The eigenvalue condition \eqref{ExcitationOperatorsDef1} 
-can thus be recasted in the form of a Sternheimer-like equations for the excited states
-\begin{align}
-\left(\hnot - \eps_p\right) \ket{\phi_p^E} + \op Q_0 \op V'[\op E] \ket{\psi_p} &= E \ket{\phi_p^E} \;, \\
-\bra{\chi_p^E}\left(\hnot - \eps_p\right) + \bra{\psi_p}\op V'[\op E]\op Q_0   &= -\bra{\chi_p^E} E  \;, \nn
+with the normalization condition $\trace{\op{\tilde E}\op E'} = \delta(E-E')$. The properties of the Liouvillian superoperator (see appendix?) imply that excitations are transverse 
+operators so that $\op E = \dmnot\op E\op Q_0 + \op Q_0\op E\dmnot$. This condition allows us to introduce a dyadic representation of excitations as follows
+\begin{align}\lb{ExcitationOperatorsDef2}
+\op E &= \sum_p \left( \ket{\phi^E_p}\bra{\psi_p} + \ket{\psi_p} \bra{\tilde\chi^E_p}\right)\;, \nn \\
+\op{\tilde E} &= \sum_p \left( \ket{\chi^E_p}\bra{\psi_p} + \ket{\psi_p} \bra{\tilde\phi^E_p}\right)\;,
+\end{align}
+and the \emph{excited states} $\ket{\phi^E_p}$ and $\bra{\tilde\chi^E_p}$ and their conjugates span the domain of $\op Q_0$, \emph{i.e} the empty subspace of $\hnot$. 
+
+We restrict our analysis assuming that a set of hypothesis commonly realized in DFT holds (symmetry of the transition basis, specify better? see appendix?). In this case excitation
+eigenvalues come in pair. It is possible to show that and if a couple of left and right eigenstates satisfy \eqref{ExcitationOperatorsDef1} with energy $E$ than their transpose 
+%$(\op E,\op{\tilde E})$ $(\op E^t,\op{\tilde E}^t)$ 
+are eigenstates of the same equations with eigenvalue $-E$. Equations \eqref{ExcitationOperatorsDef1} can be recasted in the form of a Sternheimer-like equations for the excited states. 
+In particular, the left action eigenvalue equation provides
+%We further analyze the first equation of \eqref{ExcitationOperatorsDef1} under a.   
+%In this case the excitation eigenvalues come in pair and for each 
+%that can be recasted in the form of a Sternheimer-like equations for the excited states. We assume that
+%the condition $(\op V'[\op E])^t=\op V'[\op E^t]$
+%The eigenvalue 
+%condition \eqref{ExcitationOperatorsDef1} 
+%can thus be recasted in the 
+% \begin{align}
+% &\left(\hnot - \eps_p\right) \ket{\phi_p^E} + \op Q_0 \op V'[\op E] \ket{\psi_p} = E \ket{\phi_p^E} \;, \nn\\
+% &\left(\hnot - \eps_p\right)\ket{\tilde\chi_p^E} + \op Q_0\op V'[\op E^t]\ket{\psi_p}   = -E\ket{\tilde\chi_p^E}  \;, 
+% \end{align}
+\begin{align}\lb{ExcitationOperatorsDef3}
+&\left[E-(\hnot - \eps_p)\right] \ket{\phi_p^E} = \op Q_0 \op V'[\op E] \ket{\psi_p} \;, \nn\\
+&\left[-E-(\hnot - \eps_p)\right]\ket{\tilde\chi_p^E} = \op Q_0\op V'[\op E^t]\ket{\psi_p}  \;, 
 \end{align}
 and the orthonormalization condition of the excitation operators is expressed as 
-\be
-\sum_p \left(\braket{\phi_p^E | \phi_p^{E'}} + \braket{\chi_p^E | \chi_p^{E'}}\right) = \delta(E-E') \;. \nn
+\be\lb{ExcitedStateOrthNormDef1}
+\sum_p \left(\brket{\tilde\phi_p^E}{\phi_p^{E'}} + \brket{\tilde\chi_p^{E'}}{\chi_p^E}\right) = \delta(E-E') \;. 
 \ee
+Equations \eqref{ExcitationOperatorsDef3} allows us to present a localization argument for the excited states using the same procedure adopted for fluctuation states in 
+section \ref{FluctuationState}. Pursing this strategy we present a formal solution of \eqref{ExcitationOperatorsDef3} as follows 
+\begin{align}
+&\ket{\phi^E_p} = \op G_H(E+\eps_p)\ket{s_{\phi}} \;, \nn \\
+&\ket{\tilde\chi^E_p} = \op G_H(-E+\eps_p)\ket{s_{\tilde\chi}} \;,
+\end{align}
+where $\op G_H$ is the Helmholtz Green function and the (self-consistent) source term $s_\phi$ and $s_{\tilde\chi}$ collect the sum of the r.h.s of \eqref{ExcitationOperatorsDef3} 
+plus the action of the KS potential on the excited states. 
 
-\vspace{0.3cm}
-\noindent{TODO: Identify the more convenient equations to present the localization argument on the excited states. 
-\vspace{0.3cm}
+We focus our analysis on solutions with positive energy, \emph{i.e.} with $E>0$. Looking at the coordinate representation of $\op G_H$ (see eq. \eqref{HelmholtzKernelDef1}) we conclude
+that the Helmholtz kernel evaluated in $-E+\eps_p$ contains an exponential damping factor for positive values of $E$. As a consequence all the $\ket{\tilde\chi^E_p}$ states
+exhibit a bound-state behavior in the long range. Instead, the asymptotic character of $\op G_H(E+\eps_p)$ depends from the value of $E$ and $\ket{\phi^E_p}$ varies from a bound-state 
+like behavior for $E<|\eps_p|$, to a delocalized spherical-wave like character for values of $E>|\eps_p|$. 
+%On the contrary, the localization character of $\ket{\phi^E_p}$ varies from bound-state like solutions, for $E<|\eps_p|$, to delocalized spherical-wave like 
+%behavior for values of $E>|\eps_p|$. 
+There is however a novel aspect which did not emerged in the analysis of fluctuation states and is determined by the presence of the further condition \eqref{ExcitedStateOrthNormDef1}.
+%The consequence of this condition 
+To understand this point we observe that Sternheimer equations \eqref{ExcitationOperatorsDef3} are the first order expansion of a set of Hamiltonian eigenvalue equations. It is well known 
+that the normalization constraints have the effect of determining the quantization of accessible energy levels for bound-state solutions. 
+Excited states with $E<|\eps_p|$ constitute a genuine \emph{discrete} set while the ones in the unbound energy range $E>|\eps_p|$ belong to a continuum. 
 
-Due to the previous argument we can state that the localization feature of the excited states depend on the energy of the excitation to which they belong. In particular if $E<\eps_p$ the
-state $\ket{\phi^E_p}$ behaves as a bound-state  
+This considerations determine the structure of the excitations spectrum and essentially evidence that there exists two distinct sectors of the exctiation spectrum. The first one is composed by
+localized excitations built in terms of excited states below their threshold level. This set has a finite number of elements.    
 
-%defined in the dyadic representation of the excitation operators possess  that 
-%state that the excitation spectrum is
-
-\vspace{1cm}
 
 % Now we reformulate an analogous analysis looking at the susceptibility superoperator, implicit defined through \eqref{SusceptibilityDef1}. This approach leads to the concept of \emph{excitation 
 % operators}, defined through a self-consistent operator eigenvalue equation. Excitations behave as singularity of the susceptibility operator and their knowledge provides a deeper insight 
 % into the analytic structure of the linear response. 
 
-Using the spectral decomposition of the resolvent of the Liouvillian we have:
-\be\lb{RhopExcitationDef1}
-\sop{{\cal R}}(\omega) \cdot   =
-\left(\sum_E + \int\dd E   \right) \op E
-\frac{\trace{\opskew{\tilde E}\cdot}}{\omega-E} \;,
-\ee
-with $\opskew{O} = \commutator{\op O}{\dmnot}$. 
-
-\begin{figure}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{figure}[t]
 \begin{tikzpicture}[scale=0.8]
 % axes
-\draw[->] (0,0) -- (8,0); %node[below] {$x$};
-\draw[->] (0,0) -- (0,6); %node[left] {$y$};
+\draw[->] (0,0) -- (8,0); 
+\draw[->] (0,0) -- (0,6);
 % orizontal lines
 \draw[dashed,thick,color=gray] (0,5) -- (2,5);
 \draw[very thick](2,5) -- (8,5);
@@ -363,11 +368,11 @@ with $\opskew{O} = \commutator{\op O}{\dmnot}$.
 \draw[very thick] (4,3) -- (8,3);
 \draw[dashed,thick,color=gray] (0,1) -- (6,1);
 \draw[very thick] (6,1) -- (8,1);
-% vertical lines
+% % vertical lines
 \draw[dashed,very thin,color=black] (2,0) -- (2,5);
 \draw[dashed,very thin,color=black] (4,0) -- (4,3);
 \draw[dashed,very thin,color=black] (6,0) -- (6,1);
-% threshold levels labels
+% % threshold levels labels
 \node[left] at (0,5) {$h$};
 \node[left] at (0,3) {$i$};
 \node[left] at (0,1) {$1$};
@@ -379,26 +384,28 @@ with $\opskew{O} = \commutator{\op O}{\dmnot}$.
 %\foreach \Point in {(2,5),(4,3),(6,1)}{
 %   \node at \Point {{\textbar}};%$\times$};
 %}
-\draw [very thick] (2,4.9) -- (2,5.1);
-\draw [very thick] (4,2.9) -- (4,3.1);
-\draw [very thick] (6,0.9) -- (6,1.1);
-
+\draw[very thick] (2,4.9) -- (2,5.1);
+\draw[very thick] (4,2.9) -- (4,3.1);
+\draw[very thick] (6,0.9) -- (6,1.1);
 % dotted vertical lines
-\draw[dotted,thick,color=black] (-0.2,3.6) -- (-0.2,4.4);
-\draw[dotted,thick,color=black] (-0.2,1.6) -- (-0.2,2.4);
-
+%\draw[dotted,thick,color=black] (-0.2,3.6) -- (-0.2,4.4);
+%\draw[dotted,thick,color=black] (-0.2,1.6) -- (-0.2,2.4);
 % discrete excitations
 \foreach \Point in {(0.5,5),(1.0,5),(1.8,5),(0.8,3),(1.3,3),(1.8,3),(2.4,3),(2.8,3),(3.4,3),(3.8,3),(0.7,1),(1.5,1),(1.9,1),(2.6,1),(2.9,1),(3.5,1),(4.1,1),(4.7,1),(5.7,1)}{
     \node at \Point {\textbullet};
 }
-
-
-
-
 \end{tikzpicture}
 \caption{\label{ExcitationLandscape} Excitation landscape.}
 \end{figure}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+Using the spectral decomposition of the resolvent of the Liouvillian we have
+\be\lb{RhopExcitationDef1}
+\sop{{\cal R}}(\omega) \cdot   =
+\left(\sum_E + \int\dd E   \right) \op E \,
+\frac{\trace{\commutator{\dmnot}{\op{\tilde E}}\cdot}}{\omega-E} \;.
+\ee
+%with $\opskew{O} = \commutator{\op O}{\dmnot}$. 
 
 %\subsection{Comments. The analytic structure of the linear response susceptibility}
 %
@@ -406,13 +413,23 @@ with $\opskew{O} = \commutator{\op O}{\dmnot}$.
 
 \section{Applications}
 
-...........
 
 \section{Comments and conclusions}
 
 The analysis carried out starting from the representation of the linear response functional in terms of fluctuation states has evidenced some general properties of the linear response
 for open systems. In particular, by analyzing the asymptotic behavior of fluctuation states in long range limit, we have showed that they exhibit a bound-state character in the regime  
 $\omega<|\eps_h|$. Consequently we have argued that the linear response functional, in the same $\omega$ range, provides a setup-independent result with a modest computational effort... 
+
+\appendix
+\section{Eigenvalue equations of the Liouvillian superoperator}
+
+Derive the equations of motion for the excited states. Discussion of the effects of various supplementary conditions...
+
+\section{Casida equations}
+
+From the equations of motion for the excited states to the Casida equations...
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
